# IMUandVisionDataFusion

./: .gitignore  CMakeLists.txt  README.md
KeyPointDetection/: methods.md
KeyPointDetection/TEST/: ORB  ORB.cpp  file_reading.cpp  img-display.cpp  pair.cpp  reprojection_error.cpp
data/: 20191218_100925.csv  first_test
data/back_to_origin_test/: gen_keypoint.sh  imu.csv  keypoint_10.txt  keypoint_100.txt  keypoint_101.txt  keypoint_102.txt  keypoint_103.txt  keypoint_104.txt  keypoint_105.txt  keypoint_106.txt  keypoint_107.txt  keypoint_108.txt  keypoint_109.txt  keypoint_11.txt  keypoint_110.txt  keypoint_111.txt  keypoint_112.txt  keypoint_113.txt  keypoint_114.txt  keypoint_115.txt  keypoint_116.txt  keypoint_117.txt  keypoint_118.txt  keypoint_119.txt  keypoint_12.txt  keypoint_120.txt  keypoint_121.txt  keypoint_122.txt  keypoint_123.txt  keypoint_124.txt  keypoint_125.txt  keypoint_126.txt  keypoint_127.txt  keypoint_128.txt  keypoint_129.txt  keypoint_13.txt  keypoint_130.txt  keypoint_131.txt  keypoint_132.txt  keypoint_133.txt  (+152 more)
data/distance_measure/: gen_keypoint.sh  imu.csv  keypoint_10.txt  keypoint_11.txt  keypoint_12.txt  keypoint_13.txt  keypoint_15.txt  keypoint_18.txt  keypoint_19.txt  keypoint_2.txt  keypoint_20.txt  keypoint_21.txt  keypoint_22.txt  keypoint_23.txt  keypoint_24.txt  keypoint_25.txt  keypoint_26.txt  keypoint_27.txt  keypoint_28.txt  keypoint_29.txt  keypoint_3.txt  keypoint_30.txt  keypoint_31.txt  keypoint_32.txt  keypoint_33.txt  keypoint_34.txt  keypoint_35.txt  keypoint_36.txt  keypoint_37.txt  keypoint_39.txt  (+47 more)
output/: bundle_data.txt
src/: BundleAdjuster.cpp  BundleAdjuster.h  BundleAdjustment.cpp  BundleAdjustment.h  BundleAdjustmentIMU.cpp  BundleAdjustmentIMU.h  CameraState.h  IMUIntegration.cpp  IMUIntegration.h  KeypointDetection.cpp  KeypointDetection.h  KeypointMatching.cpp  main.cpp
(+843 files in other folders)
